--- a/somaiya-sync-newsfeed/src/App.css
+++ b/somaiya-sync-newsfeed/src/App.css
@@ -1,42 +1,84 @@
 #root {
-  max-width: 1280px;
+  background: linear-gradient(to bottom, #1E0342, #0E46A3);
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
 
 .card {
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+
+.container {
+  
+  margin: auto;
+  padding: 20px;
 }
+
+.heading {
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.input-container {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.input-field {
+  flex: 1;
+  margin-right: 10px;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+}
+
+.add-button {
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.news-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: calc(100% + 20px); /* Add 20px to compensate for margin of last news-card */
+  margin-right: -20px; /* Compensate for margin of last news-card */
+}
+
+.news-card {
+  flex: 0 0 auto; /* Each card takes its own width */
+  width: 300px; /* Fixed width for each card */
+  max-height: 350px;
+  overflow-y: scroll;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+}
+
+.news-card h3 {
+  margin-top: 0;
+}
+
+.delete-button {
+  padding: 6px 12px;
+  font-size: 14px;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+
+
+
+
