--- a/somaiya-sync-newsfeed/src/App.css
+++ b/somaiya-sync-newsfeed/src/App.css
@@ -49,13 +49,13 @@
 .news-container {
   display: flex;
   flex-wrap: wrap;
-  width: calc(100% + 20px); /* Add 20px to compensate for margin of last news-card */
-  margin-right: -20px; /* Compensate for margin of last news-card */
+  width: calc(100% + 20px); 
+  margin-right: -20px; 
 }
 
 .news-card {
-  flex: 0 0 auto; /* Each card takes its own width */
-  width: 300px; /* Fixed width for each card */
+  flex: 0 0 auto; 
+  width: 300px; 
   max-height: 350px;
   overflow-y: scroll;
   margin-right: 20px;
